--- a/Voting/VotingApp/Components/Layout/NavMenu.razor
+++ b/Voting/VotingApp/Components/Layout/NavMenu.razor
@@ -27,17 +27,11 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <i class="polling-station-icon navmenu-icon fa-solid fa-house"></i>
-                <span class="title">Cabina nr. @(SignalRService._assignedCabin ?? "Neînregistrat")</span>
+                <span class="title">Cabina nr. @(_assignedCabin ?? "Neînregistrat")</span>
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <span class="text-muted">Cum se folosește aplicația?</span>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <i class="polling-station-icon navmenu-icon fa-solid fa-cloud"></i>
-                <span class="title">Tutorial</span>
-            </NavLink>
         </div>
     </nav>
 </div>
@@ -46,10 +40,10 @@
     private bool collapseNavMenu = true;
     private IUserOnlineService UserOnlineService;
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
+    private string? _assignedCabin;
     protected override async Task OnInitializedAsync()
     {
-        SignalRService.OnConnectionStateChanged += StateHasChanged;
+        SignalRService.OnConnectionStateChanged += OnUserOnlineServiceChanged;
         var state = await authStateProvider.GetAuthenticationStateAsync();
         var user = state.User;
         PollingStationClient.SetUser(user);
@@ -61,6 +55,7 @@
             Console.WriteLine($"Navmenu using UserOnlineService [{UserOnlineService.InstanceId}]");
         }
         UserOnlineService.OnChange += OnUserOnlineServiceChanged;
+        _assignedCabin = SignalRService._assignedCabin;
         //Console.WriteLine("NavMenu subscribed to OnChange");
     }
 
@@ -77,6 +72,7 @@
 
     private async void OnUserOnlineServiceChanged()
     {
+        _assignedCabin = SignalRService._assignedCabin;
         await InvokeAsync(StateHasChanged);
     }
 }
