--- a/Voting/VotingApp/Components/Pages/Home.razor
+++ b/Voting/VotingApp/Components/Pages/Home.razor
@@ -20,8 +20,6 @@
 @inject IVotingClient votingClient
 @inject NavigationManager NavigationManager
 
-@initializationError
-
 @if (isDisconnected)
 {
     <div class="locked-screen text-center">
@@ -29,7 +27,9 @@
             <span class="warning-icon fa-solid fa-exclamation-circle" style="user-select: none;"></span>
         </div>
 
-        <h2 class="warning-text" style="user-select: none;">Această sesiune a fost deconectată</h2>
+        <h2 class="warning-text" style="user-select: none;">
+            @initializationError
+        </h2>
         <p style="user-select: none;">Vă rugam dați refresh la pagină sau deschideți un tab nou pentru a vă reconecta</p>
 
     </div>
@@ -124,6 +124,7 @@ else
     private bool isSubmittingVote = false; 
     private bool voteSubmissionSuccess = false;
     private bool isDisconnected = false;
+
     protected override async Task OnInitializedAsync()
     {
         VotingService.OnAppUnlocked += HandleAppUnlockedFromServer;
@@ -154,7 +155,8 @@ else
     {
         if (string.IsNullOrEmpty(_sessionId))
         {
-            initializationError = "Circuit/Session ID is not available to connect.";
+            initializationError = "Sesiunea nu este disponibila pentru conectare";
+            isDisconnected = true;
             _isConnected = false;
             StateHasChanged();
             return;
@@ -169,6 +171,7 @@ else
         try
         {
             initializationError = null; // Clear previous errors
+            isDisconnected = false;
             // InitializeAsync will handle connection and initial registration
             // It should return the assigned cabin or an indicator of success/failure
             string? cabin = await VotingService.InitializeAndRegisterAsync(_pollingStationId, _sessionId, user);
@@ -186,8 +189,15 @@ else
             {
                 _assignedCabin = string.Empty; // Or cabin if it contains the error message
                 initializationError = $"Failed to register with SignalR service: {cabin ?? "Unknown error"}";
+                isDisconnected = true;
                 Console.WriteLine(initializationError);
             }
+        }
+        catch(InvalidOperationException ioex)
+        {
+            isDisconnected = true;
+            initializationError = ioex.Message;
+            await VotingService.HandleConnectionClosed(null);
         }
         catch (Exception ex) // Catch exceptions from InitializeAndRegisterAsync
         {
@@ -209,50 +219,6 @@ else
         }
         InvokeAsync(StateHasChanged);
     }
-
-    private async Task StartConnection()
-    {
-        try
-        {
-            await _hubConnection.StartAsync();
-            _isConnected = true;
-            Console.WriteLine("Connection started");
-            await RegisterMySession();
-
-        }
-        catch (Exception ex)
-        {
-            Console.WriteLine($"Error starting connection: {ex.Message}");
-            _isConnected = false;
-        }
-    }
-
-    private async Task RegisterMySession()
-    {
-        try
-        {
-            if (string.IsNullOrEmpty(_pollingStationId) && string.IsNullOrEmpty(_assignedCabin) && string.IsNullOrEmpty(_sessionId))
-            {
-                var state = await authStateProvider.GetAuthenticationStateAsync();
-                var user = state.User;
-                await VotingService.InitializeAndRegisterAsync(_pollingStationId, _assignedCabin, user);
-                //UserOnlineService.Connect(_sessionId, _assignedCabin);
-                Console.WriteLine($"Registered session {_sessionId} and got booth number: {_assignedCabin}");
-            }else
-            {
-                Console.WriteLine("Not enough data to register session");
-            }
-
-            StateHasChanged();
-        }
-        catch (Exception ex)
-        {
-            Console.WriteLine($"Error calling RegisterSession: {ex.Message}");
-            _assignedCabin = "Error: " + ex.Message;
-            StateHasChanged();
-        }
-    }
-
 
     public async ValueTask DisposeAsync()
     {
@@ -302,6 +268,7 @@ else
             if(cabinToDelete == cabinNr)
             {
                 isDisconnected = true;
+                initializationError = "Această sesiune a fost deconectată de către preșesintele de comisie";
                 await VotingService.HandleConnectionClosed(null);
             }
         }
