--- a/Voting/VotingApp/Components/Pages/Home.razor
+++ b/Voting/VotingApp/Components/Pages/Home.razor
@@ -268,7 +268,7 @@ else
             if(cabinToDelete == cabinNr)
             {
                 isDisconnected = true;
-                initializationError = "Această sesiune a fost deconectată de către preșesintele de comisie";
+                initializationError = "Această sesiune a fost deconectată de către președintele de comisie";
                 await VotingService.HandleConnectionClosed(null);
             }
         }
