--- a/Voting/VotingApp/wwwroot/app.css
+++ b/Voting/VotingApp/wwwroot/app.css
@@ -35,6 +35,12 @@
     --dark: #192039;
 }
 
+* {
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Standard syntax */
+}
 
 html, body {
     background-color: var(--dark-color);
